--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -28,7 +28,20 @@ div.side_bar{
 }
 
 div.main_view{
-  background-image:url('../images/background.png');
+/*   background-image:url('../images/background.png'); */
   background-repeat:repeat;
   float:right;
+}
+#container{
+  width:100%;
+  height:100%;
+}
+#container canvas
+{
+  width:100%;
+  height:100%;
+}
+#dialogs{
+  width:0px;
+  height:0px;
 }
