--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -2,18 +2,18 @@ body{
   background: #606060;
   font-family: 'Droid Sans', sans-serif;
 }
-div.top_bar{
-  background: #45484d; /* Old browsers */
-  background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); /* IE10+ */
-  background: linear-gradient(top,  #45484d 0%,#000000 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); /* IE6-9 */ 
-  width:100%;
-  height: 3em;
-}
+/* div.top_bar{ */
+/*   background: #45484d; Old browsers */
+/*   background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); FF3.6+ */
+/*   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); Chrome,Safari4+ */
+/*   background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); Chrome10+,Safari5.1+ */
+/*   background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); Opera 11.10+ */
+/*   background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); IE10+ */
+/*   background: linear-gradient(top,  #45484d 0%,#000000 100%); W3C */
+/*   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); IE6-9  */
+/*   width:100%; */
+/*   height: 3em; */
+/* } */
 
 button {
   margin: .5em;
@@ -28,7 +28,7 @@ div.side_bar{
 }
 
 div.main_view{
-/*   background-image:url('../images/background.png'); */
+  background-image:url('../images/background.png');
   background-repeat:repeat;
   float:right;
 }
