Completed look of load image dialog

--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -2,18 +2,36 @@ body{
   background: #606060;
   font-family: 'Droid Sans', sans-serif;
 }
-/* div.top_bar{ */
-/*   background: #45484d; Old browsers */
-/*   background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); FF3.6+ */
-/*   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); Chrome,Safari4+ */
-/*   background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%); Chrome10+,Safari5.1+ */
-/*   background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); Opera 11.10+ */
-/*   background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); IE10+ */
-/*   background: linear-gradient(top,  #45484d 0%,#000000 100%); W3C */
-/*   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); IE6-9  */
-/*   width:100%; */
-/*   height: 3em; */
-/* } */
+
+div.top_bar{
+  color: #FFFFFF;
+  font-size: 2em;
+  font-weight: bold;
+  
+  /*   Old browsers */
+  background: #45484d; 
+  /*     FF3.6+ */
+  background: -moz-linear-gradient(top,  #45484d 0%, #000000 100%); 
+  /* Chrome,Safari4+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#45484d), color-stop(100%,#000000)); 
+  /*   Chrome10+,Safari5.1+ */
+  background: -webkit-linear-gradient(top,  #45484d 0%,#000000 100%);
+  /*   Opera 11.10+ */
+  background: -o-linear-gradient(top,  #45484d 0%,#000000 100%); 
+  /*   IE10+ */
+  background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%); 
+  /*   W3C */
+  background: linear-gradient(top,  #45484d 0%,#000000 100%); 
+  /*   IE6-9  */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 ); 
+  width:100%;
+  height: 1.5em;
+}
+
+div.top_bar *{
+  display: inline-block;
+  padding: .25em;
+}
 
 button {
   margin: .5em;
@@ -25,6 +43,10 @@ button .ui-button-text{
 
 div.side_bar{
   float:left;
+}
+
+div.side_bar .control_buttons{
+  text-align: center;
 }
 
 div.main_view{
