--- a/GraphicsProject/war/css/selectImageDialog.css
+++ b/GraphicsProject/war/css/selectImageDialog.css
@@ -1,8 +1,54 @@
-.selectImageDialog img{
-  width:150;
-  height:auto;
+.selectImageDialog{
+  text-align:center;
 }
-.dndZone{
+
+.dialog_images {
+  overflow: hidden;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dialog_images img {
+  width: 169px;
+  height: auto;
+  float: left;
+  margin: 10px 10px 0 0;
+}
+
+.upload {
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  border: 0.25em solid #FFFFFF;
+  margin: 10px;
+}
+
+.upload,.upload_file {
+  width: 200px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.upload_file {
+  opacity: 0;
+  filter: alpha(opacity = 0);
+  position: absolute;
+  right: 0px;
+  top: 0;
+  font-size: 40px;
+}
+
+.upload span {
+  color: white;
+  line-height: 3em;
+}
+
+.or_text{
+  margin:10px;
+}
+
+.dndZone {
   border-style: dashed;
   border-width: 0.25em;
   border-color: #FFFFFF;
@@ -12,17 +58,16 @@
   display: table;
 }
 
-.cell{
+.cell {
   display: table-cell;
   vertical-align: middle;
 }
 
-.dndZone p{
+.dndZone p {
   text-size: 2em;
 }
 
-
-.dndZone.dropping{
- border-color: red;
- color: red; 
+.dndZone.dropping {
+  border-color: red;
+  color: red;
 }
