--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -95,9 +95,13 @@ div.main_view {
   /*   overflow:scroll; */
 }
 
+.overflowScroll{
+	overflow: scroll;
+}
+
 div.main_view canvas {
-  width: 100%;
-  height: 100%;
+  width: 1280px;
+  height: 800px;
 }
 
 #dialogs {
