--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -1,76 +1,80 @@
 body {
-  background: #202020;
-  font-family: 'Droid Sans', sans-serif;
+	background: #202020;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 div.top_bar {
-  color: #FFFFFF;
-  font-size: 2em;
-  font-weight: bold;
-  /*   Old browsers */
-  background: #45484d;
-  /*     FF3.6+ */
-  background: -moz-linear-gradient(top, #45484d 0%, #000000 100%);
-  /* Chrome,Safari4+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #45484d),
-    color-stop(100%, #000000) );
-  /*   Chrome10+,Safari5.1+ */
-  background: -webkit-linear-gradient(top, #45484d 0%, #000000 100%);
-  /*   Opera 11.10+ */
-  background: -o-linear-gradient(top, #45484d 0%, #000000 100%);
-  /*   IE10+ */
-  background: -ms-linear-gradient(top, #45484d 0%, #000000 100%);
-  /*   W3C */
-  background: linear-gradient(top, #45484d 0%, #000000 100%);
-  /*   IE6-9  */
-  filter: progid:DXImageTransform.Microsoft.gradient(  startColorstr='#45484d',
-    endColorstr='#000000', GradientType=0 );
-  width: 100%;
-  height: 1.5em;
+	color: #FFFFFF;
+	font-size: 2em;
+	font-weight: bold;
+	/*   Old browsers */
+	background: #45484d;
+	/*     FF3.6+ */
+	background: -moz-linear-gradient(top, #45484d 0%, #000000 100%);
+	/* Chrome,Safari4+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #45484d),
+		color-stop(100%, #000000) );
+	/*   Chrome10+,Safari5.1+ */
+	background: -webkit-linear-gradient(top, #45484d 0%, #000000 100%);
+	/*   Opera 11.10+ */
+	background: -o-linear-gradient(top, #45484d 0%, #000000 100%);
+	/*   IE10+ */
+	background: -ms-linear-gradient(top, #45484d 0%, #000000 100%);
+	/*   W3C */
+	background: linear-gradient(top, #45484d 0%, #000000 100%);
+	/*   IE6-9  */
+	filter: progid:DXImageTransform.Microsoft.gradient(   startColorstr='#45484d',
+		endColorstr='#000000', GradientType=0 );
+	width: 100%;
+	height: 1.5em;
 }
 
 div.top_bar * {
-  display: inline-block;
-  padding: .25em;
+	display: inline-block;
+	padding: .25em;
 }
 
 button {
-  margin: .5em;
+	margin: .5em;
 }
 
 button .ui-button-text {
-  font-size: .75em;
+	font-size: .75em;
 }
 
 .accordian_wrapper {
-  font-size: .75em;
+	font-size: .75em;
 }
 
 div.side_bar {
-  float: left;
+	float: left;
 }
 
 div.side_bar .control_buttons {
-  text-align: center;
+	text-align: center;
 }
 
-#effects div{
-  overflow: hidden;
+#effects div {
+	overflow: hidden;
 }
 
 div.main_view {
-  background-image: url('../images/background.png');
-  background-repeat: repeat;
-  float: right;
-  /*   overflow:scroll; */
+	background-image: url('../images/background.png');
+	background-repeat: repeat;
+	float: right;
+	/*   overflow:scroll; */
 }
 
-.overflowScroll{
+.overflowScroll {
 	overflow: scroll;
 }
 
 #dialogs {
-  overflow: hidden;
-  height: 0px;
-  visibility: hidden;
+	overflow: hidden;
+	height: 0px;
+	visibility: hidden;
+}
+
+.hide_div {
+	visibility: hidden;
 }
