--- a/GraphicsProject/war/css/index.css
+++ b/GraphicsProject/war/css/index.css
@@ -42,10 +42,6 @@ button .ui-button-text {
 	font-size: .75em;
 }
 
-.accordian_wrapper {
-	font-size: .75em;
-}
-
 div.side_bar {
 	float: left;
 }
@@ -77,4 +73,5 @@ div.main_view {
 
 .hide_div {
 	visibility: hidden;
+	height: 0px;
 }
