Crop tool now works

--- a/GraphicsProject/war/css/tools.css
+++ b/GraphicsProject/war/css/tools.css
@@ -1,7 +1,59 @@
-.cursor_crosshair{
+html canvas.cursor-crosshair {
 	cursor: crosshair;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.cursor_move{
-	cursor: all-scroll;
+html canvas.cursor-move {
+	cursor: move;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+html canvas.cursor-ne-resize {
+	cursor: ne-resize;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+html canvas.cursor-se-resize {
+	cursor: se-resize;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+html canvas.cursor-n-resize {
+	cursor: n-resize;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+html canvas.cursor-e-resize {
+	cursor: e-resize;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
